keep calm and segwit

--- a/scripts/bitcoind.conf.example
+++ b/scripts/bitcoind.conf.example
@@ -19,5 +19,5 @@ script
     # Don't change anything below here unless you know what you're doing
     [[ -e $pidfile && ! -d "/proc/$(cat $pidfile)" ]] && rm $pidfile
     [[ -e $pidfile && "$(cat /proc/$(cat $pidfile)/cmdline)" != $cmd* ]] && rm $pidfile
-    exec start-stop-daemon --start -c $user --chdir $home --pidfile $pidfile -m --startas $cmd -- -prune=2048 -rpcuser=user -rpcpassword=password -daemon
+    exec start-stop-daemon --start -c $user --chdir $home --pidfile $pidfile -m --startas $cmd -- -prune=2048 -rpcuser=user -rpcpassword=password -uacomment=UASF-SegWit-BIP148 -daemon
 end script
